Fix height overflow on html5 videos

--- a/static/css/plugins/html5video.css
+++ b/static/css/plugins/html5video.css
@@ -1,3 +1,4 @@
 #player video {
   width: 100%;
+  max-height: 30em;
 }
